# glossary

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  changelog-1.0-1.1.md  hugo.toml  mkdocs.yml  requirements.in  requirements.txt
.github/: dependabot.yaml
.github/workflows/: hugo.yaml  workflow.yml
assets/: glossary_xlsx_to_yaml.py  uk-tre-glossary-v0.yaml  uktre-glossary.yaml
content/: _index.md  v0.md
content/v0/: _content.gotmpl  _index.md
docs/: index.md
layouts/page/: glossary.html  redirect.html
layouts/partials/: custom-head.html  site-header.html
layouts/shortcodes/: glossary.html
plugins/: create_category_pages.py
plugins/mkdocs-uktre-glossary-plugin/: LICENSE  README.md  pyproject.toml
plugins/mkdocs-uktre-glossary-plugin/src/mkdocs_uktre_glossary_plugin/: plugin.py  readers.py
static/: uk-tre-glossary.csv
static/css/: overrides.css
